--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -158,4 +158,53 @@
 	<data name="CheckDm" xml:space="preserve">
 		<value>DM을 확인해보세요!</value>
 	</data>
+	<data name="help_Description" xml:space="preserve">
+		<value>모든 명령어와 설명을 표시합니다.</value>
+	</data>
+	<data name="pause_Description" xml:space="preserve">
+		<value>현재 재생중인 음악을 일시 중지합니다.</value>
+	</data>
+	<data name="grab_Description" xml:space="preserve">
+		<value>현재 곡을 다이렉트 메시지로 저장합니다.</value>
+	</data>
+	<data name="leave_Description" xml:space="preserve">
+		<value>음악을 중지하고 채널을 떠납니다.</value>
+	</data>
+	<data name="resume_Description" xml:space="preserve">
+		<value>현재 재생중인 음악을 재개합니다.</value>
+	</data>
+	<data name="nowplaying_Description" xml:space="preserve">
+		<value>현재 재생중인 곡 정보를 출력합니다.</value>
+	</data>
+	<data name="queue_Description" xml:space="preserve">
+		<value>현재 재생중인 음악과 대기열을 표시합니다.</value>
+	</data>
+	<data name="remove_Description" xml:space="preserve">
+		<value>대기열부터 음악을 제거합니다.</value>
+	</data>
+	<data name="seek_Description" xml:space="preserve">
+		<value>원하는 시간대로 노래를 넘깁니다.</value>
+	</data>
+	<data name="skip_Description" xml:space="preserve">
+		<value>현재 재생중인 음악을 넘깁니다.</value>
+	</data>
+	<data name="longplay_Description" xml:space="preserve">
+		<value>음악을 재생합니다.
+ play로 추가한 음악보다 우선순위가 낮습니다.</value>
+	</data>
+	<data name="imageonly_Description" xml:space="preserve">
+		<value>명령이 실행된 채널에 채팅을 금지합니다.</value>
+	</data>
+	<data name="gpt_Description" xml:space="preserve">
+		<value>chatgpt에 메세지를 전송합니다.</value>
+	</data>
+	<data name="aram_Description" xml:space="preserve">
+		<value>등록된 멤버들에게 호출을 보냅니다.</value>
+	</data>
+	<data name="aramdelete_Description" xml:space="preserve">
+		<value>멤버에서 삭제됩니다.</value>
+	</data>
+	<data name="aramregister_Description" xml:space="preserve">
+		<value>멤버로 등록합니다.</value>
+	</data>
 </root>
