--- a/DiscordBot/Resource/Localization.resx
+++ b/DiscordBot/Resource/Localization.resx
@@ -210,4 +210,10 @@ This has a lower priority than music added with play.</value>
 	<data name="Permission" xml:space="preserve">
 		<value>You don't have permission.</value>
 	</data>
+	<data name="Dice" xml:space="preserve">
+		<value>{0} rolls {1} ({2})</value>
+	</data>
+	<data name="wrongDice" xml:space="preserve">
+		<value>Wrong Parameter</value>
+	</data>
 </root>
