feat: Add BossParser, BossList

--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -237,4 +237,13 @@
 	<data name="bossinfo_Description" xml:space="preserve">
 		<value>현재 보스 정보를 표시합니다.</value>
 	</data>
+	<data name="bossrank_Description" xml:space="preserve">
+		<value>보스 랭크보드를 표시합니다.</value>
+	</data>
+	<data name="bosslist_Description" xml:space="preserve">
+		<value>보스 리스트를 표시합니다.</value>
+	</data>
+	<data name="bossrankreset_Description" xml:space="preserve">
+		<value>보스 랭크보드를 초기화합니다.(권한필요)</value>
+	</data>
 </root>
