feat: add fishing

--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -243,10 +243,13 @@
 	<data name="bosslist_Description" xml:space="preserve">
 		<value>보스 리스트를 표시합니다.</value>
 	</data>
-	<data name="bossrankreset_Description" xml:space="preserve">
-		<value>보스 랭크보드를 초기화합니다.(권한필요)</value>
+	<data name="datareset_Description" xml:space="preserve">
+		<value>데이터를 초기화합니다.(권한필요)</value>
 	</data>
 	<data name="myinfo_Description" xml:space="preserve">
 		<value>내 게임 정보를 표시합니다.</value>
+	</data>
+	<data name="fishing_Description" xml:space="preserve">
+		<value>낚시를 합니다.</value>
 	</data>
 </root>
