--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -243,16 +243,22 @@
 	<data name="bosslist_Description" xml:space="preserve">
 		<value>보스 리스트를 표시합니다.</value>
 	</data>
-	<data name="datareset_Description" xml:space="preserve">
-		<value>데이터를 초기화합니다.(권한필요)</value>
-	</data>
 	<data name="myinfo_Description" xml:space="preserve">
 		<value>내 게임 정보를 표시합니다.</value>
+	</data>
+	<data name="datareset_Description" xml:space="preserve">
+		<value>데이터를 초기화합니다.(권한필요)</value>
 	</data>
 	<data name="fishing_Description" xml:space="preserve">
 		<value>낚시를 합니다.</value>
 	</data>
 	<data name="fishlist_Description" xml:space="preserve">
 		<value>물고기 리스트를 표시합니다.</value>
+	</data>
+	<data name="gamblegamelist_Description" xml:space="preserve">
+		<value>겜블 리스트를 표시합니다.</value>
+	</data>
+	<data name="dogamblegame_Description" xml:space="preserve">
+		<value>겜블을 합니다. 추가 명령어 입력이 가능합니다.(ex. dgg s) 명령어는 겜블 리스트에서 확인 가능합니다.</value>
 	</data>
 </root>
