--- a/DiscordBot/Resource/Localization.resx
+++ b/DiscordBot/Resource/Localization.resx
@@ -243,16 +243,22 @@ This has a lower priority than music added with play.</value>
 	<data name="bosslist_Description" xml:space="preserve">
 		<value>Shows the boss list.</value>
 	</data>
-	<data name="datareset_Description" xml:space="preserve">
-		<value>Reset the data.(Permission required)</value>
-	</data>
 	<data name="myinfo_Description" xml:space="preserve">
 		<value>Shows my game information.</value>
+	</data>
+	<data name="datareset_Description" xml:space="preserve">
+		<value>Reset the data.(Permission required)</value>
 	</data>
 	<data name="fishing_Description" xml:space="preserve">
 		<value>Do Fishing.</value>
 	</data>
 	<data name="fishlist_Description" xml:space="preserve">
 		<value>Shows the fish list.</value>
+	</data>
+	<data name="gamblegamelist_Description" xml:space="preserve">
+		<value>Shows the gamble list.</value>
+	</data>
+	<data name="dogamblegame_Description" xml:space="preserve">
+		<value>Gambling. Additional commands can be input (ex. dgg s). Commands can be checked on the Gamble List.</value>
 	</data>
 </root>
