--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -261,4 +261,7 @@
 	<data name="dogamblegame_Description" xml:space="preserve">
 		<value>겜블을 합니다. 추가 명령어 입력이 가능합니다.(ex. dgg s) 명령어는 겜블 리스트에서 확인 가능합니다.</value>
 	</data>
+	<data name="dofundsgamble_Description" xml:space="preserve">
+		<value>수금도박을 합니다. 당첨 시 모인 돈을 전부 가져갑니다.</value>
+	</data>
 </root>
