--- a/DiscordBot/Resource/Localization.resx
+++ b/DiscordBot/Resource/Localization.resx
@@ -264,4 +264,10 @@ This has a lower priority than music added with play.</value>
 	<data name="dofundsgamble_Description" xml:space="preserve">
 		<value>Gamble Funds. If you win, you take all the money collected.</value>
 	</data>
+	<data name="donation_Description" xml:space="preserve">
+		<value>Donate to the donation box. You can enter the amount (ex. !dn 1000)</value>
+	</data>
+	<data name="thanks_Description" xml:space="preserve">
+		<value>Take your donation from the donation box.</value>
+	</data>
 </root>
