--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -161,6 +161,9 @@
 	<data name="help_Description" xml:space="preserve">
 		<value>모든 명령어와 설명을 표시합니다.</value>
 	</data>
+	<data name="gamehelp_Description" xml:space="preserve">
+		<value>모든 게임 명령어와 설명을 표시합니다.</value>
+	</data>
 	<data name="pause_Description" xml:space="preserve">
 		<value>현재 재생중인 음악을 일시 중지합니다.</value>
 	</data>
@@ -247,7 +250,7 @@
 		<value>내 게임 정보를 표시합니다.</value>
 	</data>
 	<data name="datareset_Description" xml:space="preserve">
-		<value>데이터를 초기화합니다.(권한필요)</value>
+		<value>데이터를 초기화합니다. gold, kill, totaldamage, boss(권한필요)</value>
 	</data>
 	<data name="fishing_Description" xml:space="preserve">
 		<value>낚시를 합니다.</value>
@@ -269,5 +272,11 @@
 	</data>
 	<data name="thanks_Description" xml:space="preserve">
 		<value>기부함에 있는 기부금을 가져갑니다.</value>
+	</data>
+	<data name="setfundsgamblemoney_Description" xml:space="preserve">
+		<value>기부함에 기부금을 설정합니다.(권한필요)</value>
+	</data>
+	<data name="settestmoney_Description" xml:space="preserve">
+		<value>테스트 돈을 세팅합니다.(권한필요)</value>
 	</data>
 </root>
