feat: add new gamble

--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -261,14 +261,14 @@
 	<data name="gamblegamelist_Description" xml:space="preserve">
 		<value>도박 리스트를 표시합니다.</value>
 	</data>
-	<data name="dogamblegame_Description" xml:space="preserve">
-		<value>도박을 합니다. 추가 명령어 입력이 가능합니다.(ex. dgg s) 명령어는 도박리스트에서 확인 가능합니다.</value>
+	<data name="dodicegamble_Description" xml:space="preserve">
+		<value>주사위 도박을 합니다. 금액 입력 가능(ex. 주사위도박 1000)</value>
 	</data>
 	<data name="dofundsgamble_Description" xml:space="preserve">
 		<value>수금도박을 합니다. 당첨 시 모인 돈을 전부 가져갑니다.</value>
 	</data>
 	<data name="donation_Description" xml:space="preserve">
-		<value>기부함에 기부를 합니다. 금액 입력 가능(ex. !기부 1000)</value>
+		<value>기부함에 기부를 합니다. 금액 입력 가능(ex. 기부 1000)</value>
 	</data>
 	<data name="thanks_Description" xml:space="preserve">
 		<value>기부함에 있는 기부금을 가져갑니다.</value>
