--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -279,4 +279,10 @@
 	<data name="addtestmoney_Description" xml:space="preserve">
 		<value>테스트 돈을 추가합니다.(권한필요)</value>
 	</data>
+	<data name="upgradeweapon_Description" xml:space="preserve">
+		<value>무기를 강화합니다. (데미지 +강화수치)</value>
+	</data>
+	<data name="upgradering_Description" xml:space="preserve">
+		<value>반지를 강화합니다. (공격찬스 +강화수치)</value>
+	</data>
 </root>
