--- a/DiscordBot/Resource/Localization.resx
+++ b/DiscordBot/Resource/Localization.resx
@@ -279,4 +279,10 @@ This has a lower priority than music added with play.</value>
 	<data name="addtestmoney_Description" xml:space="preserve">
 		<value>Add money for test. (Permission required)</value>
 	</data>
+	<data name="upgradeweapon_Description" xml:space="preserve">
+		<value>Strengthen your weapon. (Damage + Enhanced Value)</value>
+	</data>
+	<data name="upgradering_Description" xml:space="preserve">
+		<value>Strengthen the ring. (attack chance + reinforcement value)</value>
+	</data>
 </root>
