--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -201,19 +201,16 @@
 		<value>음악을 재생합니다.
  play로 추가한 음악보다 우선순위가 낮습니다.</value>
 	</data>
-	<data name="imageonly_Description" xml:space="preserve">
-		<value>명령이 실행된 채널에 채팅을 금지합니다.</value>
-	</data>
 	<data name="gpt_Description" xml:space="preserve">
 		<value>chatgpt에 메세지를 전송합니다.</value>
 	</data>
-	<data name="aram_Description" xml:space="preserve">
+	<data name="doaram_Description" xml:space="preserve">
 		<value>등록된 멤버들에게 호출을 보냅니다.</value>
 	</data>
-	<data name="aramdelete_Description" xml:space="preserve">
+	<data name="doaramdelete_Description" xml:space="preserve">
 		<value>멤버에서 삭제됩니다.</value>
 	</data>
-	<data name="aramregister_Description" xml:space="preserve">
+	<data name="doaramregister_Description" xml:space="preserve">
 		<value>멤버로 등록합니다.</value>
 	</data>
 	<data name="Permission" xml:space="preserve">
@@ -255,9 +252,6 @@
 	<data name="myinfo_Description" xml:space="preserve">
 		<value>내 게임 정보를 표시합니다.</value>
 	</data>
-	<data name="datareset_Description" xml:space="preserve">
-		<value>데이터를 초기화합니다. gold, kill, totaldamage, boss, equipvalue(권한필요)</value>
-	</data>
 	<data name="fishing_Description" xml:space="preserve">
 		<value>낚시를 합니다.</value>
 	</data>
@@ -278,12 +272,6 @@
 	</data>
 	<data name="thanks_Description" xml:space="preserve">
 		<value>기부함에 있는 기부금을 가져갑니다.</value>
-	</data>
-	<data name="setfundsgamblemoney_Description" xml:space="preserve">
-		<value>기부함에 기부금을 설정합니다.(권한필요)</value>
-	</data>
-	<data name="addtestmoney_Description" xml:space="preserve">
-		<value>테스트 돈을 추가합니다.(권한필요)</value>
 	</data>
 	<data name="upgradeweapon_Description" xml:space="preserve">
 		<value>무기를 강화합니다. (데미지 +강화수치)</value>
