--- a/DiscordBot/Resource/Localization.resx
+++ b/DiscordBot/Resource/Localization.resx
@@ -277,7 +277,7 @@ This has a lower priority than music added with play.</value>
 		<value>Strengthen your weapon. (Damage + Enhanced Value)</value>
 	</data>
 	<data name="upgradering_Description" xml:space="preserve">
-		<value>Strengthen the ring. (attack chance + reinforcement value)</value>
+		<value>Strengthen the ring. (attack chance, dice gamble + reinforcement value)</value>
 	</data>
 	<data name="upgradesuccesspercentagelist_Description" xml:space="preserve">
 		<value>Shows a list of upgrade equip probabilities.</value>
