--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -280,6 +280,6 @@
 		<value>반지를 강화합니다. (공격찬스,주사위도박 +강화수치)</value>
 	</data>
 	<data name="upgradesuccesspercentagelist_Description" xml:space="preserve">
-		<value>강화 확률 리스트를 표시합니다.</value>
+		<value>강화 확률 리스트를 표시합니다. 단계 입력 가능(ex. ul 0)</value>
 	</data>
 </root>
