--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -238,7 +238,10 @@
 		<value>현재 참여중인 음성채널 연결을 종료합니다.</value>
 	</data>
 	<data name="bossattack_Description" xml:space="preserve">
-		<value>보스에게 공격을 시도합니다. (데미지 1~100)</value>
+		<value>보스에게 공격을 시도합니다. (데미지 1~100)
+   공격 시, 가한 데미지 만큼 골드를 얻습니다.
+   처치 시, 마지막 공격자에게 일정 골드를 지급합니다.
+   처지 시, 딜량 1위에게 딜량만큼 골드를 지급합니다.</value>
 	</data>
 	<data name="bossinfo_Description" xml:space="preserve">
 		<value>현재 보스 정보를 표시합니다.</value>
@@ -277,7 +280,7 @@
 		<value>무기를 강화합니다. (데미지 +강화수치)</value>
 	</data>
 	<data name="upgradering_Description" xml:space="preserve">
-		<value>반지를 강화합니다. (공격찬스,주사위도박 +강화수치)</value>
+		<value>반지를 강화합니다. (공격적중확률,주사위도박 +강화수치)</value>
 	</data>
 	<data name="upgradesuccesspercentagelist_Description" xml:space="preserve">
 		<value>강화 확률 리스트를 표시합니다. 단계 입력 가능(ex. ul 0)</value>
