--- a/DiscordBot/Resource/Localization.resx
+++ b/DiscordBot/Resource/Localization.resx
@@ -239,6 +239,9 @@ This has a lower priority than music added with play.</value>
 	</data>
 	<data name="bossattack_Description" xml:space="preserve">
 		<value>Attempt to attack the boss. (Damage 1-100)</value>
+   When attacking, gain gold equal to the damage dealt.
+   When defeated, a certain amount of gold is paid to the last attacker.
+   In case of defeat, gold is paid to the person with the highest deal amount equal to the deal amount.
 	</data>
 	<data name="bossinfo_Description" xml:space="preserve">
 		<value>Shows current boss information.</value>
@@ -277,7 +280,7 @@ This has a lower priority than music added with play.</value>
 		<value>Strengthen your weapon. (Damage + Enhanced Value)</value>
 	</data>
 	<data name="upgradering_Description" xml:space="preserve">
-		<value>Strengthen the ring. (attack chance, dice gamble + reinforcement value)</value>
+		<value>Strengthen the ring. (attack hit chance, dice gamble + reinforcement value)</value>
 	</data>
 	<data name="upgradesuccesspercentagelist_Description" xml:space="preserve">
 		<value>Shows a list of upgrade equip probabilities. Step input possible (ex. ul 0)</value>
