--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -277,14 +277,10 @@
 		<value>기부함에 있는 기부금을 가져갑니다.</value>
 	</data>
 	<data name="upgradeweapon_Description" xml:space="preserve">
-		<value>무기를 강화합니다.
-   (데미지 +강화수치 X 5)
-   (낚시확률 +강화수치)</value>
+		<value>무기를 강화합니다. (데미지, 낚시확률 증가)</value>
 	</data>
 	<data name="upgradering_Description" xml:space="preserve">
-		<value>반지를 강화합니다.
-   (공격적중확률 +강화수치)
-   (주사위도박 +강화수치 X 2)</value>
+		<value>반지를 강화합니다. (공격적중확률, 주사위도박 수치 증가)</value>
 	</data>
 	<data name="upgradesuccesspercentagelist_Description" xml:space="preserve">
 		<value>강화 확률 리스트를 표시합니다. 단계 입력 가능(ex. ul 0)</value>
