--- a/DiscordBot/Resource/Localization.resx
+++ b/DiscordBot/Resource/Localization.resx
@@ -276,6 +276,12 @@ This has a lower priority than music added with play.</value>
 	<data name="thanks_Description" xml:space="preserve">
 		<value>Take your donation from the donation box.</value>
 	</data>
+	<data name="randomdonation_Description" xml:space="preserve">
+		<value>Donate to the random donation box. You can enter the amount (ex. Donation 1000), and a random key is automatically generated. (1~10)</value>
+	</data>
+	<data name="randomthanks_Description" xml:space="preserve">
+		<value>Generates a random key and brings donations to the random donation box if correct.</value>
+	</data>
 	<data name="upgradeweapon_Description" xml:space="preserve">
 		<value>Strengthen your weapon. (Damage, fishing rate increase)</value>
 	</data>
