--- a/DiscordBot/Resource/Localization.resx
+++ b/DiscordBot/Resource/Localization.resx
@@ -170,6 +170,9 @@
 	<data name="gamblehelp_Description" xml:space="preserve">
 		<value>Show gamble commands and descriptions</value>
 	</data>
+	<data name="userinfohelp_Description" xml:space="preserve">
+		<value>Show userinfo commands and descriptions</value>
+	</data>
 	<data name="pause_Description" xml:space="preserve">
 		<value>Pause the currently playing music</value>
 	</data>
@@ -234,7 +237,7 @@ This has a lower priority than music added with play.</value>
 	<data name="dice_Description" xml:space="preserve">
 		<value>Roll the dice.</value>
 	</data>
-	<data name="exit_Description" xml:space="preserve">
+	<data name="doexit_Description" xml:space="preserve">
 		<value>Leave voice channel you are currently participating in.</value>
 	</data>
 	<data name="bossattack_Description" xml:space="preserve">
